--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <artifactId>nukleus</artifactId>
   <version>develop-SNAPSHOT</version>
   <name>Nukleus API</name>
+  <description>Nukleus API</description>
   <url>https://github.com/reaktivity/nukleus.java</url>
 
   <licenses>
