--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,9 @@
     <jacoco.coverage.ratio>0.58</jacoco.coverage.ratio>
     <jacoco.missed.count>12</jacoco.missed.count>
 
-    <agrona.version>1.1.0</agrona.version>
+    <agrona.version>1.6.0</agrona.version>
     <junit.version>4.12</junit.version>
-    <k3po.version>3.0.0-alpha-101</k3po.version>
+    <k3po.version>3.0.0</k3po.version>
     <jmh.version>1.12</jmh.version>
   </properties>
 
