--- a/.github/workflows/ossrh.yml
+++ b/.github/workflows/ossrh.yml
@@ -17,7 +17,9 @@ jobs:
     - name: Import GPG key
       run: |
         echo $OSSRH_SIGNER_KEY > /tmp/private-key.txt
-        gpg --import /tmp/private-key.txt
+        ls -l /tmp/private-key.txt
+        gpg --version
+        gpg -v --import /tmp/private-key.txt
         rm /tmp/private-key.txt
       env:
         OSSRH_SIGNER_KEY: ${{ secrets.OSSRH_SIGNER_KEY }}
