--- a/.github/workflows/ossrh.yml
+++ b/.github/workflows/ossrh.yml
@@ -1,7 +1,7 @@
 name: ossrh
 
 on:
-  registry_package:
+  release:
     types: [published]
   workflow_dispatch:
 
@@ -23,15 +23,19 @@ jobs:
     - name: Setup JDK ${{ matrix.java }}
       uses: actions/setup-java@v1
       with:
-        java-version: ${{ matrix.java }}
+        java-version: 9
+        server-id: ossrh
+        server-username: OSSRH_USERNAME
+        server-password: OSSRH_PASSWORD
+        gpg-private-key: ${{ secrets.OSSRH_SIGNER_KEY }}
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    - name: Build with Maven
-      run: ./mvnw -B -nsu -Possrh deploy
+    - name: Deploy to Maven Central
+      run: ./mvnw -B -nsu -Possrh,github.packages deploy
     - name: Notify via Slack
       uses: 8398a7/action-slack@v3
       with:
@@ -48,5 +52,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        MATRIX_CONTEXT: ${{ toJson(matrix) }}
+        OSSRH_USERNAME: ${{ secrts.OSSRH_USERNAME }}
+        OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
       if: ${{ env.SLACK_WEBHOOK_URL != null }}
