--- a/.github/workflows/ossrh.yml
+++ b/.github/workflows/ossrh.yml
@@ -1,17 +1,25 @@
 name: ossrh
 
 on:
+  release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
   build:
-    name: Sync
+    name: Publish
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout GitHub sources
       uses: actions/checkout@v2
-    - name: Setup JDK ${{ matrix.java }}
+    - name: Setup GitHub Packages
+      uses: actions/setup-java@v1
+    - name: Download from GitHub Packages
+      run: ./mvnw -B -nsu -Pgithub.packages package dependency:copy
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+    - name: Setup Maven Central
       uses: actions/setup-java@v1
       with:
         java-version: 9
@@ -19,14 +27,8 @@ jobs:
         server-username: OSSRH_USERNAME
         server-password: OSSRH_PASSWORD
         gpg-private-key: ${{ secrets.OSSRH_SIGNER_KEY }}
-    - name: Cache Maven packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
-    - name: Deploy to Maven Central
-      run: ./mvnw -B -nsu -Possrh,github.packages deploy
+    - name: Publish to Maven Central
+      run: ./mvnw -B -nsu -Possrh deploy
     - name: Notify via Slack
       uses: 8398a7/action-slack@v3
       with:
