--- a/pom.xml
+++ b/pom.xml
@@ -434,27 +434,6 @@
           <url>https://maven.pkg.github.com/reaktivity/packages/</url>
         </repository>
       </repositories>
-    </profile>
-
-    <profile>
-      <id>ossrh</id>
-
-      <distributionManagement>
-        <snapshotRepository>
-          <id>ossrh</id>
-          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-          <id>ossrh</id>
-          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-      </distributionManagement>
-
-      <properties>
-        <skipTests>true</skipTests>
-        <skipITs>true</skipITs>
-        <jacoco.skip>true</jacoco.skip>
-      </properties>
 
       <build>
         <plugins>
@@ -497,15 +476,33 @@
                 </artifact>
               </artifactItems>
             </configuration>
-            <executions>
-              <execution>
-                <phase>verify</phase>
-                <goals>
-                  <goal>copy</goal>
-                </goals>
-              </execution>
-            </executions>
           </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>ossrh</id>
+
+      <distributionManagement>
+        <snapshotRepository>
+          <id>ossrh</id>
+          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+          <id>ossrh</id>
+          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+      </distributionManagement>
+
+      <properties>
+        <skipTests>true</skipTests>
+        <skipITs>true</skipITs>
+        <jacoco.skip>true</jacoco.skip>
+      </properties>
+
+      <build>
+        <plugins>
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>build-helper-maven-plugin</artifactId>
