--- a/.github/workflows/ossrh.yml
+++ b/.github/workflows/ossrh.yml
@@ -15,6 +15,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup GitHub Packages
       uses: actions/setup-java@v1
+      with:
+        java-version: 9
     - name: Download from GitHub Packages
       run: ./mvnw -B -nsu -Pgithub.packages package dependency:copy
       env:
