--- a/.github/workflows/ossrh.yml
+++ b/.github/workflows/ossrh.yml
@@ -29,7 +29,7 @@ jobs:
         server-username: OSSRH_USERNAME
         server-password: OSSRH_PASSWORD
         gpg-private-key: ${{ secrets.OSSRH_SIGNER_KEY }}
-        gpg-passphrase: ${{ secrets.OSSRH_SIGNER_PASSPHRASE }}
+        gpg-passphrase: OSSRH_SIGNER_PASSPHRASE
     - name: Publish to Maven Central
       run: ./mvnw -B -nsu -Possrh deploy
     - name: Notify via Slack
@@ -49,4 +49,5 @@ jobs:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+        OSSRH_SIGNER_PASSPHRASE: ${{ secrets.OSSRH_SIGNER_PASSPHRASE }}
       if: ${{ env.SLACK_WEBHOOK_URL != null }}
