--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,10 @@
 name: Release
 
-on: push
-  tags:
-    - [0-9]+.[0-9]+
-    - [0-9]+.[0-9]+.[0-9]+
+on:
+  push:
+    tags:
+      - [0-9]+.[0-9]+
+      - [0-9]+.[0-9]+.[0-9]+
 
 jobs:
   release:
