--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,10 @@ name: publish
 on:
   release:
     types: [published]
+  workflow_run:
+    workflows: ["release"]
+    types:
+      - completed
   workflow_dispatch:
 
 jobs:
